--- a/src/app/shared/components/input-checkbox/input-checkbox.component.html
+++ b/src/app/shared/components/input-checkbox/input-checkbox.component.html
@@ -1,6 +1,7 @@
  <div class="form-check">
-    <input class="form-check-input" type="checkbox" [value]="InputCheckboxComponentData.value" [id]="InputCheckboxComponentData.id" (change)="onCheckboxChange($event)">
-    <label class="form-check-label small" [for]="InputCheckboxComponentData.id">
+    <input class="form-check-input" type="checkbox" [value]="InputCheckboxComponentData.value"
+    [id]="InputCheckboxComponentData.id" (change)="onCheckboxChange($event)">
+    <label class="form-check-label ps-1 small" [for]="InputCheckboxComponentData.id">
       {{InputCheckboxComponentData.label}}
     </label>
 </div>
