update all to connected with backend server

--- a/src/app/features/products/components/product-card/product-card.component.html
+++ b/src/app/features/products/components/product-card/product-card.component.html
@@ -129,7 +129,7 @@
              class="flex-grow-1"
             [DropdownComponentData]="{
                   title:'',
-                  dropdownSelection:dropdownSelection,
+                  dropdownSelection:!isRtl() ?dropdownSelection:dropdownSelectionArabic,
                   optionsArray:categories(),
                   key:isRtl()?'nameAr':'nameEn',
                   noBorder:false
